crates/cinrs-core/tests/snapshots/codegen__a_cleanup_attribute_in_a_cfg_body_runs_on_the_edges.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r#\"\n        static void note(int *p);\n\n        int jumping(int c) {\n            int a __attribute__((cleanup(note))) = 1;\n            while (c) {\n                int b __attribute__((cleanup(note))) = 2;\n                if (b) {\n                    continue;\n                }\n                goto out;\n            }\n            return a;\n        out:\n            return 0;\n        }\n        \"#)"
---
mod __cinrs_unit_b809857c {
    const _: () = { /* the data-model check */ };
    #[allow(…)]
    unsafe extern "C" {
        #[link_name = "note"]
        pub fn __cinrs_b809857c_note(p: *mut ::core::ffi::c_int);
    }
    #[allow(…)]
    pub unsafe extern "C" fn jumping(mut c: ::core::ffi::c_int) -> ::core::ffi::c_int {
        unsafe {
            let mut a: ::core::ffi::c_int = 0;
            let mut b: ::core::ffi::c_int = 0;
            let mut __cinrs_ret: ::core::ffi::c_int = 0;
            let mut __cinrs_state: ::core::primitive::u32 = 0;
            'cfg: loop {
                match __cinrs_state {
                    0 => {
                        a = 1;
                        __cinrs_state = 1;
                        continue 'cfg;
                    }
                    1 => {
                        if c != 0 {
                            __cinrs_state = 2;
                        } else {
                            __cinrs_state = 5;
                        }
                        continue 'cfg;
                    }
                    2 => {
                        b = 2;
                        if b != 0 {
                            __cinrs_state = 3;
                        } else {
                            __cinrs_state = 4;
                        }
                        continue 'cfg;
                    }
                    3 => {
                        __cinrs_b809857c_note((&raw mut b));
                        __cinrs_state = 1;
                        continue 'cfg;
                    }
                    4 => {
                        __cinrs_b809857c_note((&raw mut b));
                        __cinrs_b809857c_note((&raw mut a));
                        return 0;
                    }
                    5 => {
                        __cinrs_ret = a;
                        __cinrs_b809857c_note((&raw mut a));
                        return __cinrs_ret;
                    }
                    _ => ::core::unreachable!(),
                }
            }
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_b809857c::*;
