crates/cinrs-core/tests/snapshots/codegen__a_computed_goto_is_a_match_on_the_label_number.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r\"\n        int interp(int n) {\n            static void *table[] = { &&add, &&done };\n            int total = 0;\n            int i = 0;\n            goto *table[i];\n        add:\n            total += n;\n            i = 1;\n            goto *table[i];\n        done:\n            return total;\n        }\n        \")"
---
mod __cinrs_unit_33d25611 {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    #[repr(C, align(16))]
    #[derive(Copy, Clone)]
    pub struct __cinrs_align_16<T>(pub T);
    static mut __cinrs_static_33d25611_interp_table: __cinrs_align_16<
        [*mut ::core::ffi::c_void; 2],
    > = __cinrs_align_16([
        1usize as *mut ::core::ffi::c_void,
        2usize as *mut ::core::ffi::c_void,
    ]);
    pub unsafe extern "C" fn interp(mut n: ::core::ffi::c_int) -> ::core::ffi::c_int {
        unsafe {
            let mut __cinrs_goto: ::core::ffi::c_ulong = 0;
            let mut total: ::core::ffi::c_int = 0;
            let mut i: ::core::ffi::c_int = 0;
            total = 0;
            i = 0;
            __cinrs_goto = (i as ::core::ffi::c_ulong).wrapping_add(1);
            'dispatch: loop {
                match __cinrs_goto {
                    1 => {
                        total = total.wrapping_add(n);
                        i = 1;
                        __cinrs_goto = (i as ::core::ffi::c_ulong).wrapping_add(1);
                    }
                    2 => {
                        return total;
                    }
                    _ => {
                        if ::core::cfg!(debug_assertions) {
                            ::core::unreachable!()
                        } else {
                            unsafe { ::core::hint::unreachable_unchecked() }
                        }
                    }
                }
            }
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_33d25611::*;
