crates/cinrs-core/tests/snapshots/codegen__a_constructor_becomes_an_init_array_entry.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r#\"\n        static int started;\n        __attribute__((constructor)) static void begin(void) { started = 1; }\n        __attribute__((destructor)) static void end(void) { started = 0; }\n        int has_started(void) { return started; }\n        \"#)"
---
mod __cinrs_unit_09a188b0 {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    static mut started: ::core::ffi::c_int = 0;
    unsafe extern "C" fn begin() {
        unsafe {
            started = 1;
        }
    }
    unsafe extern "C" fn end() {
        unsafe {
            started = 0;
        }
    }
    pub unsafe extern "C" fn has_started() -> ::core::ffi::c_int {
        unsafe {
            return started;
        }
    }
    const _: () = { /* the data-model check */ };
    #[used]
    #[cfg_attr(target_vendor = "apple", unsafe(link_section = "__DATA,__mod_init_func"))]
    #[cfg_attr(not(target_vendor = "apple"), unsafe(link_section = ".init_array"))]
    static __CINRS_INIT_09a188b0_begin: unsafe extern "C" fn() = begin;
    #[used]
    #[cfg_attr(target_vendor = "apple", unsafe(link_section = "__DATA,__mod_term_func"))]
    #[cfg_attr(not(target_vendor = "apple"), unsafe(link_section = ".fini_array"))]
    static __CINRS_INIT_09a188b0_end: unsafe extern "C" fn() = end;
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_09a188b0::*;
