crates/cinrs-core/tests/snapshots/codegen__a_flexible_array_member_is_a_zero_length_tail.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r#\"\n        struct Buffer { int len; int data[]; };\n\n        int sum(struct Buffer *b) {\n            int total = 0;\n            for (int i = 0; i < b->len; i++) total += b->data[i];\n            return total;\n        }\n\n        unsigned long header_size(void) { return sizeof(struct Buffer); }\n        \"#)"
---
mod __cinrs_unit_517f0d70 {
    #[allow(…)]
    #[repr(C)]
    #[derive(Copy, Clone)]
    pub struct Buffer {
        pub len: ::core::ffi::c_int,
        pub data: [::core::ffi::c_int; 0],
    }
    #[allow(…)]
    pub unsafe extern "C" fn sum(mut b: *mut Buffer) -> ::core::ffi::c_int {
        unsafe {
            let mut total: ::core::ffi::c_int = 0;
            {
                let mut i: ::core::ffi::c_int = 0;
                'l0: loop {
                    if !(i < (*b).len) {
                        break 'l0;
                    }
                    'l0_body: {
                        total = total
                            .wrapping_add({
                                let __cinrs_tmp0 = (&raw mut (*b).data)
                                    .cast::<::core::ffi::c_int>()
                                    .offset(i as isize);
                                (*__cinrs_tmp0)
                            });
                    }
                    i = i.wrapping_add(1);
                }
            }
            return total;
        }
    }
    #[allow(…)]
    pub unsafe extern "C" fn header_size() -> ::core::ffi::c_ulong {
        unsafe {
            return 4;
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_517f0d70::*;
